# EDCC-Palmprint-Recognition

./: .clang-format  .codecov.yml  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.base  Dockerfile.python  FindEDCC.cmake  Framework.md  LICENSE  Makefile  README.md  README_CH.md  cmake_install.cmake  config.json  edcc-config-version.cmake.in  edcc-config.cmake.in  main.cpp  manage.sh  palmprintTrainGroup.json  start.sh  tags  trainData.json  tuning.py
APIInputExample/: README.md  trainingFeatures.json
database/: README.md
example/: config.json  palmprintTrainGroup.json
examples/c_example/: CMakeLists.txt  example.c
examples/cpp_example/: example.cpp
examples/cpp_exmaple/: CMakeLists.txt  example.cpp
examples/palmprint_data/: README.md  download.sh
examples/py_example/: example.py
functions/: functions.hpp
functions/extract_features/: extract_features.h  features_base.cpp  features_base.h
functions/extract_roi/: extract_roi.cpp  extract_roi.h  peak_valley_detect.cpp  peak_valley_detect.h
functions/pretreatment/: adjust_palm.cpp  adjust_palm.h  binarization.cpp  binarization.h
functions/process_parameter/: process_parameter.cpp  process_parameter.h
global/: general_function.cpp  general_function.h  general_functions.cpp  general_functions.h  global_definition.h
include/: Check.h  Core.h  EDCC.h  IO.h  Match.h  Pub.h  README.md  edcc.h  edcc_adapter.py
include/EDCC/: Core.h  EDCC.h  IO.h  Match.h
include/apiInputsExample/: README.md  config.json  trainingSet.json
include/edcc/: c_api.h  edcc.h  facade.h  status.h
jsoncpp/include/: json.h
lib/: CMakeLists.txt  README.md
manager/: pretreatment_manager.cpp
palmprint_data/: README.md  download.sh  downloads.all.lst  downloads.lst
pypackage/: MANIFEST.in  edcc.py  edcc_adapter.py  setup.cfg  setup.py
pypackage/edcc/: __init__.py  adapter.py  clib.py  code.py  config.py  constants.py  encoder.py  exceptions.py
samples/cpp_sample/: CMakeLists.txt  sample.cpp
samples/py_sample/: EDCCApiAdapter.py  PalmprintCodeRepository.py  README.md  (+3 more)
source/: CMakeLists.txt  README.md
source/include/: Check.h  Core.h  IO.h  Match.h  Pub.h
source/include/core/: check.h  checker.h  config.h  edccoding.h  match.h  matcher.h  palmprint.h  palmprint_code.h  palmprintcode.h
source/include/io/: io.h
source/include/util/: pub.h  status.h
source/src/api/: api.cc
source/src/core/: check.cc  checker.cc  config.cpp  edccoding.cc  match.cc  matcher.cc  palmprint.cc  palmprint_code.cc  palmprintcode.cc
source/src/exe/: API.cc  palmprint_recognition.cc
source/src/io/: io.cc
source/src/lib/: Check.cc  Core.cc  IO.cc  Match.cc  Pub.cc
source/src/util/: pub.cc  status.cc
test/: CMakeLists.txt  main.cpp  test_base.h
test/example/config/: config_params_over.json
test/example/features/: features.json  trainingFeaturesInvalid.json
test/example/features/linux/: features.json  trainingFeatures.json  trainingFeaturesBeenChanged.json
test/example/features/windows/: trainingFeatures.json  trainingFeaturesBeenChanged.json
test/example/group/: trainingSetGroupCover_Linux.json  trainingSetGroupCover_Windows.json  trainingSetGroupIncremental_Linux.json  trainingSetGroupIncremental_Windows.json  trainingSetGroupSomeImageError_Linux.json  trainingSetGroupSomeImageError_Windows.json  trainingSetGroup_ConflictImage_Linux.json  trainingSetGroup_ConflictImage_Windows.json  trainingSetGroup_Linux.json  trainingSetGroup_Windows.json  trainingSetGroup_WrongFormat_Linux.json  trainingSetGroup_WrongFormat_Windows.json
test/example/group/linux/: trainingSetGroupCover.json  trainingSetGroup_WrongFormat.json
test/example/group/windows/: trainingSetGroup.json  trainingSetGroupSomeImageError.json  trainingSetGroup_WrongFormat.json
test/exampleOrigin/: trainData.json
test/exampleOrigin/config/: config_correct.json  config_incremental.json  config_params_error.json  config_params_miss.json  config_params_no_default.json  config_params_over.json
test/exampleOrigin/features/: features.json  features_Linux.json  features_Windows.json  trainingFeatures.json  trainingFeaturesBeenChanged.json  trainingFeaturesBeenChanged_Linux.json  trainingFeaturesBeenChanged_Windows.json  trainingFeaturesInvalidCs.json  trainingFeatures_Linux.json  trainingFeatures_Windows.json
test/exampleOrigin/features/linux/: features.json  trainingFeatures.json  trainingFeaturesBeenChanged.json
test/exampleOrigin/features/windows/: features.json  trainingFeatures.json  trainingFeaturesBeenChanged.json
test/exampleOrigin/group/: trainingSetGroupIncremental_Windows.json  trainingSetGroup_ConflictImage_Windows.json  trainingSetGroup_Linux.json
test/exampleOrigin/group/linux/: trainingSetGroup.json  trainingSetGroupCover.json  trainingSetGroupIncremental.json  trainingSetGroupSomeImageError.json  trainingSetGroup_ConflictImage.json
test/exampleOrigin/group/windows/: trainingSetGroupCover.json  trainingSetGroupSomeImageError.json
test/include/: ft_edcc_base.h  ft_get_features_incremental.h  ft_get_two_palmprint_match_score.h  ft_parse_cmd.h
test/palmprint_data/: download.sh
test/palmprint_database/001/: Thumbs.db
test/palmprint_database/002/: Thumbs.db
test/source/include/: ft_edcc_base.h  ft_get_edcc_coding.h  ft_get_features.h  ft_get_features_incremental.h  ft_get_top_k.h  ft_get_two_palmprint_coding_match_score.h  ft_get_two_palmprint_match_score.h
test/source/src/: ft_edcc_base.cpp  ft_get_edcc_coding.cpp  ft_get_features.cpp  ft_get_features_incremental.cpp  ft_get_top_k.cpp  ft_get_two_palmprint_coding_match_score.cpp  ft_get_two_palmprint_match_score.cpp  main.cpp
test/src/: ft_edcc_base.cpp  ft_get_features.cpp  ft_get_features_incremental.cpp  ft_get_top_k.cpp  ft_get_two_palmprint_match_score.cpp  ft_parse_cmd.cpp  main.cpp
test/test_codec/: test_core_encoder.cpp  test_gabor_filter.cpp
test/test_config/: test_reader.cpp
test/test_controller/: test_c_api.cpp  test_facade.cpp
test/test_core/: test_comparer.cpp  test_encoder.cpp  test_gabor_filter.cpp
(+76 files in other folders)
