CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME run_c_sample)
PROJECT(${PROJECT_NAME})
SET(SAMPLES_ROOT ${CMAKE_BINARY_DIR}/../..)

FIND_PACKAGE(edcc REQUIRED)
INCLUDE_DIRECTORIES(${EDCC_INCLUDE_DIR})

ADD_EXECUTABLE(${PROJECT_NAME} example.c)

ADD_DEPENDENCIES(${PROJECT_NAME} ${EDCC_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${EDCC_LIBRARIES})