SET(PROJECT_NAME EDCC_TEST)
PROJECT(${PROJECT_NAME})

FIND_PACKAGE(EDCC REQUIRED)

file(GLOB_RECURSE HEADER_FILES 
    *.h
    *.hpp
)

file(GLOB_RECURSE SRC_FILES 
    *.c
    *.cpp
    *.cc
)

INCLUDE_DIRECTORIES(${EDCC_INCLUDE_DIRS})
ADD_EXECUTABLE(${PROJECT_NAME} ${HEADER_FILES} ${SRC_FILES})
add_dependencies(${PROJECT_NAME} ${EDCC_LIBS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${EDCC_LIBS})