CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME run_cpp_sample)
PROJECT(${PROJECT_NAME})

SET(CMAKE_MODULE_PATH /usr/local/share/edcc)
FIND_PACKAGE(EDCC REQUIRED)


INCLUDE_DIRECTORIES(${EDCC_INCLUDE_DIRS})
ADD_EXECUTABLE(${PROJECT_NAME} sample.cpp)
add_dependencies(${PROJECT_NAME} ${EDCC_LIBS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${EDCC_LIBS})
