CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME run_cpp_sample)
PROJECT(${PROJECT_NAME})
SET(SAMPLES_ROOT ${CMAKE_BINARY_DIR}/../..)

ADD_DEFINITIONS(-std=c++11)

FIND_PACKAGE(edcc REQUIRED)
INCLUDE_DIRECTORIES(${EDCC_INCLUDE_DIR})

EXECUTE_PROCESS(COMMAND ${SAMPLES_ROOT}/palmprint_data/download.sh)

ADD_EXECUTABLE(${PROJECT_NAME} sample.cpp)

ADD_DEPENDENCIES(${PROJECT_NAME} ${EDCC_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${EDCC_LIBRARIES})